--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "dotenv": "^16.0.3",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.11.3",
+    "@types/node": "^18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
