--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dotenv": "^16.0.3",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.3",
